# Advent-of-Code

./: .gitignore  Cargo.toml  README.md  flake.nix
aoc2015/: Cargo.toml
aoc2015/src/: main.rs
aoc2015/src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs
aoc2016/: Cargo.toml
aoc2016/src/days/: d01.rs  d02.rs  d03.rs
aoc2017/: Cargo.toml  build.rs
aoc2017/src/days/: d01.rs  d02.rs  d03.rs
aoc2018/: Cargo.toml
aoc2018/src/days/: d01.rs  d02.rs
aoc2019/: Cargo.toml
aoc2019/src/: main.rs
aoc2019/src/days/: d01.rs  d02.rs
aoc2019/src/intcode/: mod.rs
aoc2020/: Cargo.toml
aoc2020/src/: main.rs
aoc2020/src/days/: d01.rs  d02.rs
aoc2021/: Cargo.toml
aoc2021/src/days/: d01.rs  d02.rs
aoc2022/: Cargo.toml
aoc2022/src/: main.rs
aoc2022/src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs
aoc2023/: Cargo.toml
aoc2023/src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d06.rs  d07.rs  d09.rs
aoc2024/: Cargo.toml
aoc2024/src/days/: d01.rs  d02.rs
init/: Cargo.toml
init/src/: main.rs  templates.rs
macros/src/: lib.rs
utils/: Cargo.toml
utils/src/: build.rs  day.rs  lib.rs
