[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"
homepage = "https://adventofcode.com/2020"
publish = false
exclude = ["input/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
macros = { path = "../macros" }

[build-dependencies]
utils = { path = "../utils" }
