[package]
name = "init"
description = "Some helper functions for Advent of Code puzzles"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11"

[dependencies.clap]
version = "4.5"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "blocking", "rustls-tls", "http2", "cookies" ]
